Fix image gallery image spacing

--- a/css/includes/components/_pictures.scss
+++ b/css/includes/components/_pictures.scss
@@ -31,6 +31,7 @@
 
 .picture_gallery {
    max-height: 300px;
+   justify-content: space-between;
 }
 
 .pswp-horizontal-gallery {
